// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  className="vertical-card__Card-ys1jp9-1 jNzGTf"
>
  <img
    alt=""
    className="vertical-card__Img-ys1jp9-0 gRqXrc"
    src="#image"
  />
  <h1
    className="k-Title k-Title--senary k-Title--withoutMargin"
  >
    Custom title
  </h1>
  
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  className="vertical-card__Card-ys1jp9-1 jNzGTf"
>
  <img
    alt="Image alt"
    className="vertical-card__Img-ys1jp9-0 gRqXrc"
    src="#image"
  />
  <h1
    className="k-Title k-Title--senary k-Title--withoutMargin"
  >
    Custom title
  </h1>
  <div
    className="marger__StyledMarger-q3lecu-0 jKlRCh"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Custom text
    </p>
  </div>
</div>
`;
